--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ipfs-mini",
   "version": "1.1.3",
   "description": "A super tiny module for querying an IPFS node that works in nodejs and the browser.",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "files": [
     "dist",
     "internals",
